Implementation of nifty conversion

--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -6,4 +6,10 @@ LOG_BACKUP_COUNT=10
 
 # Directories
 DATA_DIR=data
-IMAGES_DIR=data/images
+IMAGES_DIR={DATA_DIR}/images
+NSCLC_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics
+NIFTI_IMAGES_DIR={IMAGES_DIR}/nifty_files
+RADIOMICS_DIR={DATA_DIR}/radiomics
+
+# Pyradiomics Params.yml file
+PYRADIOMICS_PARAMS_FILE=src/resources/Params.yml
