Implement radiomic feature extraction

--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -10,6 +10,7 @@ IMAGES_DIR={DATA_DIR}/images
 NSCLC_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics
 NIFTI_IMAGES_DIR={IMAGES_DIR}/nifty_files
 RADIOMICS_DIR={DATA_DIR}/radiomics
+RADIOMICS_FILE={RADIOMICS_DIR}/radiomics.csv
 
 # Pyradiomics Params.yml file
-PYRADIOMICS_PARAMS_FILE=src/resources/Params.yml
+PYRADIOMICS_PARAMS_FILE=src/resources/Params.yaml
