Refactor settitngs configuration

--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -4,13 +4,17 @@ LOG_INTERVAL=d
 LOG_INTERVAL_COUNT=1
 LOG_BACKUP_COUNT=10
 
+# Pyradiomics Params.yml file
+PYRADIOMICS_PARAMS_FILE=src/resources/Params.yaml
+
 # Directories
 DATA_DIR=data
 IMAGES_DIR={DATA_DIR}/images
-NSCLC_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics
-NIFTI_IMAGES_DIR={IMAGES_DIR}/nifty_files
 RADIOMICS_DIR={DATA_DIR}/radiomics
-RADIOMICS_FILE={RADIOMICS_DIR}/radiomics.csv
+RESULTS_DIR={DATA_DIR}/results
 
-# Pyradiomics Params.yml file
-PYRADIOMICS_PARAMS_FILE=src/resources/Params.yaml
+# NSCLC Radiogenomics related settigns
+NSCLC_ENABLED=true
+NSCLC_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics
+NSCLC_NIFTI_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics/NSCLC_Radiogenomics_NIFTI
+NSCLC_RADIOMICS_FILE={RADIOMICS_DIR}/nsclc_radiogenomics_radiomic_features.csv
