Added PICAI implementation

--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -4,8 +4,9 @@ LOG_INTERVAL=d
 LOG_INTERVAL_COUNT=1
 LOG_BACKUP_COUNT=10
 
-# Pyradiomics Params.yml file
-PYRADIOMICS_PARAMS_FILE=src/resources/Params.yaml
+# Pyradiomics Params.yml files
+NSCLC_PYRADIOMICS_PARAMS_FILE=src/resources/Params.yaml
+PICAI_PYRADIOMICS_PARAMS_FILE=src/resources/Params_Picai.yaml
 
 # Directories
 DATA_DIR=data
@@ -18,3 +19,8 @@ NSCLC_ENABLED=true
 NSCLC_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics
 NSCLC_NIFTI_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics_NIFTI
 NSCLC_RADIOMICS_FILE={RADIOMICS_DIR}/nsclc_radiogenomics_radiomic_features.csv
+
+# PICAI Radiogenomics related settigns
+PICAI_ENABLED=true
+PICAI_NIFTI_IMAGES_DIR={IMAGES_DIR}/PICAI
+PICAI_RADIOMICS_FILE={RADIOMICS_DIR}/picai_radiogenomics_radiomic_features.csv
