Added telegram notifications

--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -24,3 +24,7 @@ NSCLC_RADIOMICS_FILE={RADIOMICS_DIR}/nsclc_radiogenomics_radiomic_features.csv
 PICAI_ENABLED=true
 PICAI_NIFTI_IMAGES_DIR={IMAGES_DIR}/PICAI
 PICAI_RADIOMICS_FILE={RADIOMICS_DIR}/picai_radiomic_features.csv
+
+# Telegram settings
+TELEGRAM_TOKEN=5865126191:AAGjcDj1OfkpSHlZWyJc-PdskU3Ro9jJKM0
+TELEGRAM_CHAT_ID=5815443796
