Created Grid-search Cross Validation  pipeline

--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -5,8 +5,7 @@ LOG_INTERVAL_COUNT=1
 LOG_BACKUP_COUNT=10
 
 # Pyradiomics Params.yml files
-NSCLC_PYRADIOMICS_PARAMS_FILE=src/resources/Params.yaml
-PICAI_PYRADIOMICS_PARAMS_FILE=src/resources/Params_Picai.yaml
+PICAI_PYRADIOMICS_PARAMS_FILE=src/resources/Params.yaml
 
 # Directories
 DATA_DIR=data
@@ -14,16 +13,11 @@ IMAGES_DIR={DATA_DIR}/images
 RADIOMICS_DIR={DATA_DIR}/radiomics
 RESULTS_DIR={DATA_DIR}/results
 
-# NSCLC Radiogenomics related settigns
-NSCLC_ENABLED=true
-NSCLC_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics
-NSCLC_NIFTI_IMAGES_DIR={IMAGES_DIR}/NSCLC_Radiogenomics_NIFTI
-NSCLC_RADIOMICS_FILE={RADIOMICS_DIR}/nsclc_radiogenomics_radiomic_features.csv
-
-# PICAI Radiogenomics related settigns
+# PICAI Radiogenomics related settings
 PICAI_ENABLED=true
 PICAI_NIFTI_IMAGES_DIR={IMAGES_DIR}/PICAI
 PICAI_RADIOMICS_FILE={RADIOMICS_DIR}/picai_radiomic_features.csv
+PICAI_METADATA_PATH={PICAI_NIFTI_IMAGES_DIR}/picai_metadata.csv
 
 # Telegram settings
 TELEGRAM_TOKEN=5865126191:AAGjcDj1OfkpSHlZWyJc-PdskU3Ro9jJKM0
