--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -22,4 +22,4 @@ PICAI_METADATA_PATH={PICAI_NIFTI_IMAGES_DIR}/picai_metadata.csv
 # Telegram settings
 TELEGRAM_TOKEN=5865126191:AAGjcDj1OfkpSHlZWyJc-PdskU3Ro9jJKM0
 TELEGRAM_CHAT_ID=5815443796
-TELEGRAM_SEND=False
+TELEGRAM_SEND=True
