Added support for multi-process execution for multiple analyses

--- a/src/resources/settings.conf
+++ b/src/resources/settings.conf
@@ -16,7 +16,7 @@ RESULTS_DIR={DATA_DIR}/results
 # PICAI Radiogenomics related settings
 PICAI_ENABLED=true
 PICAI_NIFTI_IMAGES_DIR={IMAGES_DIR}/PICAI
-PICAI_RADIOMICS_FILE={RADIOMICS_DIR}/picai_radiomic_features.csv
+PICAI_RADIOMICS_FILE={RADIOMICS_DIR}/picai_radiomic_features
 PICAI_METADATA_PATH={PICAI_NIFTI_IMAGES_DIR}/picai_metadata.csv
 
 # Telegram settings
